@@ -2,8 +2,8 @@
 <definition>
   <datasource type="PYEVAL" name="$(name)_xpixelsize">
     <result name="result">
-pixelsizes = list(ds.$(name)_camera_pixelsize)
-ds.result = pixelsizes[0]
+from nxstools.pyeval import common
+ds.result = common.get_element(ds.$(name)_camera_pixelsize, 0)
 </result>
   $datasources.$(name)_camera_pixelsize
   </datasource>
