@@ -2,8 +2,8 @@
 <definition>
   <datasource type="PYEVAL" name="$(name)_filestartnum_cb">
     <result name="result">
-from nxstools.pyeval import pilatus
-ds.result = pilatus.filestartnum_cb(
+from nxstools.pyeval import common
+ds.result = common.filestartnum_cb(
     commonblock, ds.$(name)_filestartnum, ds.$(name)_nbframes,
     "$(name)_filestartnum")
     </result>
