@@ -713,8 +713,8 @@ class NXSCreateOnlineCPFSTest(unittest.TestCase):
                      '  <datasource type="PYEVAL" '
                      'name="mypilatus_filestartnum_cb">\n'
                      '    <result name="result">\n'
-                     'from nxstools.pyeval import pilatus\n'
-                     'ds.result = pilatus.filestartnum_cb(\n'
+                     'from nxstools.pyeval import common\n'
+                     'ds.result = common.filestartnum_cb(\n'
                      '    commonblock, ds.mypilatus_filestartnum,'
                      ' ds.mypilatus_nbframes,\n'
                      '    "mypilatus_filestartnum")\n'
@@ -1030,8 +1030,8 @@ class NXSCreateOnlineCPFSTest(unittest.TestCase):
                      '  <datasource type="PYEVAL" '
                      'name="mypilatus_filestartnum_cb">\n'
                      '    <result name="result">\n'
-                     'from nxstools.pyeval import pilatus\n'
-                     'ds.result = pilatus.filestartnum_cb(\n'
+                     'from nxstools.pyeval import common\n'
+                     'ds.result = common.filestartnum_cb(\n'
                      '    commonblock, ds.mypilatus_filestartnum,'
                      ' ds.mypilatus_nbframes,\n'
                      '    "mypilatus_filestartnum")\n'
